# BmpPP

./: .drone.yml  .gitignore  .gitmodules  LICENSE  configure.sh  readme.md  todo.md
BmpPP/: CMakeLists.txt
BmpPP/Doxygen/: doxyrun.sh
BmpPP/doxygen/: Makefile  doxyfig
BmpPP/exec/: main.cpp
BmpPP/include/BmpPP/: Bmp.h  BmpReader.h  BmpWriter.h  Colormodes.h  Version.h
BmpPP/src/: Bmp.cpp  BmpHeader.cpp  BmpReader.cpp  BmpWriter.cpp
BmpPP/test/: BmpHeader.cpp  ConvertColormode.cpp  Crop.cpp  FillChannel.cpp  MirrorHorizontally.cpp  MirrorVertically.cpp  OperatorEquals.cpp  ReInitialize.cpp  Read.cpp  Rotate.cpp  SwapChannels.cpp  Uninitialized.cpp  Write.cpp
BmpPP/test/testAssets/: .gitignore  readme.md
Doxygen/: doxyfig
Exec/: CMakeLists.txt  main.cpp
Src/: BMP.cpp  BMP.h  BmpHeader.cpp  BmpHeader.h  BmpReader.cpp  BmpWriter.cpp  CMakeLists.txt  Colormodes.h
Test/: BmpHeader.cpp  CMakeLists.txt  ConvertColormode.cpp  Crop.cpp  FillChannel.cpp  MirrorHorizontally.cpp  MirrorVertically.cpp  OperatorEquals.cpp  ReInitialize.cpp  Read.cpp  Rotate.cpp  SwapChannels.cpp  Uninitialized.cpp  Write.cpp
Test/TestAssets/: readme.md
